-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7
-
Component/s: hotspot
-
b07
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2208530 | 7 | Tom Rodriguez | P3 | Closed | Fixed | b137 |
Tests
vm/oom/production/OOMProductionTrace_InternedString
vm/oom/production/OOMProductionAnonymousTrace_InternedString
fails on win 32 becasue they run out of native memory or 32process size.
However on this machine (sunfire004) these tests should occupy about 1G of memory.
The memory overhead is very much so it caue out of native memory error.
vm/oom/production/OOMProductionTrace_InternedString
vm/oom/production/OOMProductionAnonymousTrace_InternedString
fails on win 32 becasue they run out of native memory or 32process size.
However on this machine (sunfire004) these tests should occupy about 1G of memory.
The memory overhead is very much so it caue out of native memory error.
- backported by
-
JDK-2208530 Native memory usage grow unexpectedly for vm/oom/*InternedString tests
-
- Closed
-
- relates to
-
JDK-6962931 move interned strings out of the perm gen
-
- Resolved
-