7032129: Native memory usage grow unexpectedly for vm/oom/*InternedString tests

Reviewed-by: kvn, kamg, jcoomes